mudança de logo e header

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,8 +12,8 @@
   --gray-700: #15171b; // Background header
   --gray-900: #111113; // Background body
 
-  --blue-900: #1fa4e5; // CTA - Buttons
-  --yellow-500: #ffbe16;
+  --green-100: #61ffca; // CTA - Buttons
+  --purple-500: #a277ff;
 }
 
 @media (max-width: 1080px) {
