--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -39,7 +39,7 @@
       }
 
       &.active {
-        color: var(--purple-500);
+        color: var(--green-100);
         font-weight: bold;
       }
     }
