--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,7 +11,11 @@
   --gray-700: #15171b; // Background header
   --gray-900: #111113; // Background body
   --green-100: #61ffca; // CTA - Buttons
+  --green-200: #20d397; // CTA - Buttons
+  --green-300: #10aaa6; // CTA - Buttons
   --purple-500: #a277ff;
+  --orange-100: #ff9700;
+  --orange-200: #ff5a00;
 }
 
 @media (max-width: 1080px) {
