--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -3,35 +3,47 @@
 }
 
 .containerHeader {
-  min-height: calc(100vh - 5rem);
+  height: calc(100vh - 8rem);
   max-width: 1120px;
   margin: 0 auto;
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
+}
+
+.contentImg {
+  max-width: 600px;
 
   img {
-    max-width: 640px;
+    max-height: 360px;
+    max-width: 400px;
+    border-radius: 16px;
+    box-shadow: 0px 0px 32px var(--green-300);
   }
+}
+
+.animatee {
+  animation: blink 700ms infinite normal, typing 7s steps(40) 500ms normal both;
 }
 
 .ctaText {
   max-width: 600px;
 
   h1 {
-    font-size: 3.5rem;
-    line-height: 4.5rem;
+    border-right: 2px solid var(--white);
+    color: var(--white);
+    font-size: 2.5rem;
+    font-family: "Special Elite", monospace;
     font-weight: 900;
     margin-top: 2.5rem;
-    color: var(--white);
+    white-space: nowrap;
+    overflow: hidden;
   }
 
-  h1:after {
-    content: "|";
-    margin-left: 5px;
-    opacity: 1;
-    animation: pisca 0.7s infinite;
+  div {
+    display: flex;
+    flex-direction: column;
   }
 
   span {
@@ -135,10 +147,10 @@
       button {
         display: block;
       }
-    }
 
-    img {
-      max-width: 600px;
+      img {
+        max-width: 600px;
+      }
     }
 
     div h1 {
@@ -164,6 +176,7 @@
   .container {
     .containerHeader {
       flex-direction: column;
+      margin-bottom: 3rem;
 
       button {
         width: 100%;
@@ -171,10 +184,11 @@
         justify-content: center;
         align-items: center;
       }
-    }
 
-    div img {
-      max-width: 500px;
+      img {
+        max-width: 400px;
+        margin-bottom: 2rem;
+      }
     }
 
     div h1 {
@@ -193,5 +207,27 @@
         max-width: 400px;
       }
     }
+
+    .ctaText {
+      margin-bottom: 2rem;
+    }
+  }
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 25rem;
+  }
+}
+
+@keyframes blink {
+  from {
+    border-right-color: var(--white);
+  }
+  to {
+    border-right-color: transparent;
   }
 }
