--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -33,10 +33,11 @@
   h1 {
     border-right: 2px solid var(--white);
     color: var(--white);
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-family: "Special Elite", monospace;
     font-weight: 900;
     margin-top: 2.5rem;
+    margin-bottom: 1rem;
     white-space: nowrap;
     overflow: hidden;
   }
@@ -153,10 +154,6 @@
       }
     }
 
-    div h1 {
-      font-size: 3rem;
-    }
-
     div h2 {
       font-size: 2.3rem;
 
@@ -191,10 +188,6 @@
       }
     }
 
-    div h1 {
-      font-size: 3rem;
-    }
-
     div h2 {
       font-size: 1rem;
     }
@@ -209,6 +202,7 @@
     }
 
     .ctaText {
+      margin-top: 10rem;
       margin-bottom: 2rem;
     }
   }
@@ -219,7 +213,7 @@
     width: 0;
   }
   to {
-    width: 25rem;
+    width: 20rem;
   }
 }
 
