--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -50,13 +50,13 @@
   margin-left: auto;
   height: 2.5rem;
   border-radius: 0.5rem;
-  background: var(--green-300);
+  background-color: var(--orange-200);
   border: 0;
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--white);
+  color: var(--gray-900);
   font-weight: bold;
   transition: filter 0.2s;
 
