--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,7 @@
   --green-100: #61ffca; // CTA - Buttons
   --green-200: #20d397; // CTA - Buttons
   --green-300: #10aaa6; // CTA - Buttons
+  --green-400: #11AAA6
   --purple-500: #a277ff;
   --orange-100: #ff9700;
   --orange-200: #ff5a00;
