--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -12,6 +12,7 @@
 
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
   img {
     cursor: pointer;
@@ -46,12 +47,39 @@
   }
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+}
+
 .readyButton {
-  margin-left: auto;
-  height: 2.5rem;
+  height: 2rem;
   border-radius: 0.5rem;
-  background-color: var(--orange-200);
   border: 0;
+  padding: 0 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--gray-900);
+  font-weight: bold;
+  transition: filter 0.2s;
+  background-color: var(--orange-200);
+
+  &:hover {
+    filter: brightness(110%);
+    -webkit-transform: scale(1.01);
+    transform: scale(1.01);
+  }
+}
+
+.paint {
+  height: 2rem;
+  border-radius: 0.5rem;
+  border: 0;
+  background-color: var(--green-100);
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -65,6 +93,16 @@
     -webkit-transform: scale(1.01);
     transform: scale(1.01);
   }
+}
+
+.totalView {
+  font-size: 1rem;
+  color: var(--green-100);
+  position: absolute;
+  right: 16px;
+  border: 1px solid var(--green-100);
+  border-radius: 4px;
+  padding: 4px;
 }
 
 @media (max-width: 870px) {
@@ -85,9 +123,16 @@
       margin-left: auto;
       margin-right: auto;
     }
+  }
 
-    .readyButton {
-      display: none;
-    }
+  .totalView {
+    top: 0;
+    right: 0;
+    border: 2px solid var(--green-100);
+  }
+
+  .content {
+    flex-direction: row;
+    margin-top: 16px;
   }
 }
